--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               <!-- Yellow style -->
               <div class="style-option rounded-full overflow-hidden cursor-pointer w-16 h-16 selected"
                    data-style="yellow">
-                <img src="assets/pngjaunefluo.png" class="w-full h-full object-cover">
+                <img src="assets/pngjaunefluo2.png" class="w-full h-full object-cover">
               </div>
               <!-- Pink style -->
               <div class="style-option rounded-full overflow-hidden cursor-pointer w-16 h-16"
@@ -179,7 +179,7 @@
     
     // Overlay dictionary
     const overlays = {
-      yellow: 'assets/pngjaunefluo.png',
+      yellow: 'assets/pngjaunefluo2.png',
       pink: 'assets/pngrose.png'
     };
     
